--- a/src/assets/style/custom.less
+++ b/src/assets/style/custom.less
@@ -42,3 +42,29 @@ body {
     }
   }
 }
+
+.mt20{
+  margin-top: 20px;
+}
+.ml20{
+  margin-left: 20px;
+}
+.mr20{
+  margin-right: 20px;
+}
+.mb20{
+  margin-bottom: 20px;
+}
+
+.mt10{
+  margin-top: 10px;
+}
+.ml10{
+  margin-left: 10px;
+}
+.mr10{
+  margin-right: 10px;
+}
+.mb10{
+  margin-bottom: 10px;
+}
